force-app/main/default/objects/Authorization__c/Authorization__c.object-meta.xml
<CustomObject>
    <label>Contact Preferences</label>
    <nameField>
        <label>Nombre de Authorization</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>