force-app/main/default/objects/Authorization__c/fields/Auth__c.field-meta.xml
<CustomField>
    <fullName>Auth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auth</label>
    <type>Checkbox</type>
</CustomField>