force-app/main/default/objects/Authorization__c/fields/AuthChannel__c.field-meta.xml
<CustomField>
    <fullName>AuthChannel__c</fullName>
    <label>AuthChannel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>EML</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>FBK</fullName>
            </value>
            <value>
                <fullName>TWI</fullName>
            </value>
            <value>
                <fullName>ING</fullName>
            </value>
            <value>
                <fullName>LIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>