force-app/main/default/objects/Authorization__c/fields/AuthDate__c.field-meta.xml
<CustomField>
    <fullName>AuthDate__c</fullName>
    <label>AuthDate</label>
    <type>DateTime</type>
</CustomField>