force-app/main/default/objects/Authorization__c/fields/AuthMethod__c.field-meta.xml
<CustomField>
    <fullName>AuthMethod__c</fullName>
    <label>AuthMethod</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WEB</fullName>
            </value>
            <value>
                <fullName>MAIL</fullName>
            </value>
            <value>
                <fullName>FORM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>